fix(DataGrid): dense header alignment (#2711)
* fix(DataGrid): dense headeralignment fix

* fix(DataGrid): lint error

---------

--- a/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
@@ -447,7 +447,9 @@
   }
 
   .#{$block-class}__table-toolbar {
+    display: flex;
     flex: 1 0 auto;
+    align-items: flex-end;
   }
   .#{$carbon-prefix}--table-toolbar {
     background: transparent;
@@ -455,10 +457,6 @@
 
   .#{$carbon-prefix}__table-container {
     flex: 1 1 100%;
-  }
-
-  .#{$carbon-prefix}--table-toolbar {
-    padding-top: $spacing-07;
   }
 
   .#{$block-class}__toolbar-divider {
